--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "homepage": "https://github.com/TranNhatQuan/bmi_api#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
