--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
